# Garmin-Rsd-Sidescan

./: .gitignore  ADDITIONAL_FORMATS_ANALYSIS.md  B001.SON  BETA_DEPLOYMENT_STATUS.md  CESARops_TARGET_DETECTION_SYSTEM.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_DEEP_DIVE_ANALYSIS.md  COMPETITIVE_FEATURE_ROADMAP.md  CONTRIBUTING  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  ENHANCED_GUI_COMPLETE.md  ENHANCEMENT_SUMMARY.md  FINAL_SYSTEM_REPORT.md  FORMAT_IMPLEMENTATION_STATUS.md  FORMAT_INTEGRATION_RESULTS.md  GUI_USER_GUIDE.md  Garmin_RSD_Colab_v5_1.ipynb  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  LICENSE  MULTI_FORMAT_SUPPORT.md  OUTPUT_SUMMARY.md  Open  PARSER_IMPLEMENTATION_COMPLETE.md  PREVIEW_ISSUES_FIXED.md  PROJECT_STATUS_REPORT.md  README.md  ROBOTIC_INTEGRATION_ARCHITECTURE.md  RUST_DEVELOPMENT.md  SETUP_RUST.md  TESTING_COMPLETE.md  advanced_target_detection.py  advanced_video_export.py  app.py  block_pipeline.py  competitive_3d_viewer.py  comprehensive_output_generator.py  comprehensive_output_summary.json  core_shared.py  (+33 more)
.github/: FUNDING.yml  copilot-instructions.md
R00012/: B001.IDX
RELEASE_NOTES/: v1.0.0-rc.1.md
benchmark_results/: simple_benchmark_report.json
comprehensive_test_output/: test_track.kml
holloway_professional_overlay/: survey_metadata.json
original core files/: Garmin_Firmware_Findings_Sampled.md  RSD_Running_Letter.md  core_shared.py  pattern_lab.report.txt
parsers/: __init__.py  __init___multi.py  base_parser.py  cerulean_parser.py  edgetech_parser.py  garmin_parser.py  humminbird_parser.py  kongsberg_parser.py  lowrance_parser.py  lowrance_parser_enhanced.py  moos_parser.py  reson_parser.py  (+3 more)
rust-performance-core/: Cargo.toml
rust-performance-core/src/: lib.rs
rust-video-core/: Cargo.toml
rust-video-core/src/: alignment.rs  lib.rs  waterfall.rs
(+175 files in other folders)
